2007-04-25  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoDraftObject.m: invoke the new
	"rfc822DateString" category method on the date we put in the
	header.

2007-04-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Common/UIxUserRightsEditor.m ([UIxUserRightsEditor -defaultAction]) 
	([UIxUserRightsEditor -saveUserRightsAction]): new action methods
	which should never be overriden.
	([UIxUserRightsEditor -appendRight:newRight]) 
	([UIxUserRightsEditor -removeRight:right]) 
	([UIxUserRightsEditor -appendExclusiveRight:newRightfromList:list]) 
	([UIxUserRightsEditor -removeAllRightsFromList:list]): new utility
	methods that can be used by the subclasses.
	([UIxUserRightsEditor -prepareRightsForm]): new method that should
	mandatorily be overriden to prepare the elements of the subclassed
	form.
	([UIxUserRightsEditor -updateRights]): new method that should
	mandatorily be overriden to update the user rights from the
	elements of the subclassed form.

	* UI/Common/UIxAclEditor.m ([UIxAclEditor -_prepareUsers]): we
	check if the uid is already listed before adding it to our array.
	This is because the acl table can contain more than one record per
	user/object relationship.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder
	-setRoles:rolesforUser:uidforObjectAtPath:objectPathArray]): the
	"roles" parameter is now an NSArray instead of a string. Therefore
	we loop throughout the array to populate the table. All the
	relevant records are removed prior to the addition of the new
	rights.

	* SoObjects/Mailer/SOGoMailBaseObject.m ([SOGoMailBaseObject
	-aclsForUser:uid]): new override that returns nil until we add
	support for IMAP acls.

	* SoObjects/Mailer/SOGoMailAccounts.m
	([SOGoMailAccounts -aclsForUser:uid]): same as below.

	* SoObjects/Contacts/SOGoContactLDAPFolder.m
	([SOGoContactLDAPFolder -aclsForUser:uid]): same as below.

	* SoObjects/Contacts/SOGoContactFolders.m ([SOGoContactFolders